fixed about me section on mobile

--- a/default.css
+++ b/default.css
@@ -130,6 +130,9 @@ h6 { font-size: 16px; }
     margin: 5px;
 }
 
+.info-responsive{
+    display: none;
+}
 .left-column{
     grid-area: left-column;
     padding-top: 50px;
@@ -231,10 +234,24 @@ h6 { font-size: 16px; }
 
 .about-wrapper{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(420px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     padding-bottom: 50px;
     padding-top: 50px;
     gap: 100px;
+}
+
+.social-wrapper{
+    display: grid;
+    margin: 120px auto;
+    grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+    gap: 0px;
+}
+
+.social-img{
+    display: block;
+    margin: auto;
+    object-fit: cover;
+    height: 100px;
 }
 
 #skills{
@@ -249,6 +266,10 @@ h6 { font-size: 16px; }
     gap: 20px;
     justify-content: center;
     padding-bottom: 50px;
+}
+
+.social :hover{
+    cursor: pointer;
 }
 
 .post{
@@ -320,11 +341,27 @@ h6 { font-size: 16px; }
     border-radius: 5px;
 }
 
+
+
+@media screen and (max-width: 400px){
+    #preview{
+        display: none;
+    }
+    .info-responsive{
+        display: block;
+    }
+}
+
+
+
+
 @media screen and (max-width: 1200px){
     .main-container{
         width:95%;
     }
 }
+
+
 
 @media screen and (max-width: 800px){
     .intro-wrapper{
